--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <h1>HAPPY NEW YEAR MY FRIEND</h1>
         <h1 id="userWish"></h1>
-        <h1> BY NAFEEL</h1>
+        <h1> BY NAINA MOHAMMED</h1>
     </div>
 
     <audio id="audio" hidden>
@@ -156,3 +156,4 @@
 
 </body>
 </html>
+
